--- a/sections/header-v2.liquid
+++ b/sections/header-v2.liquid
@@ -165,7 +165,7 @@
       }
     }
   </script>
-
+<header>
   <div class="xl:mb-relative" style="background-color:{{ section.settings.header_bg }};" data-role="header-wrapper">
     <div
       data-role="header-top-bar "
@@ -330,6 +330,8 @@
       ></div>
     {% endif %}
   </div>
+  </header>
+
 </sticky-header>
 
 {% schema %}
