--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -1,6 +1,54 @@
 {{ 'section-main-page.css' | asset_url | stylesheet_tag }}
 
 {%- style -%}
+.default-pages-wrapper p {
+  font-size: 14px !important;
+  color: #4a4a4a !important;
+  line-height: 26px !important;
+}
+
+.default-pages-wrapper h1,
+.default-pages-wrapper h2,
+.default-pages-wrapper h3,
+.default-pages-wrapper h4,
+.default-pages-wrapper h5,
+.default-pages-wrapper h6 {
+  margin-bottom: 10px !important;
+  font-weight: bold !important;
+  font-size: 16px !important;
+  margin:30px 0  20px 0!important;
+}
+
+.default-pages-wrapper a {
+  color: #4b1f00 !important;
+}
+
+.default-pages-wrapper ul>li {
+  list-style-type: disc !important;
+  font-size: 14px !important;
+  color: #4a4a4a !important;
+}
+
+@media screen and (min-width: 1024px) {
+
+  .default-pages-wrapper p,
+  .default-pages-wrapper ul>li {
+    font-size: 15px !important;
+    color: #4a4a4a !important;
+    line-height: 30px !important;
+  }
+  .default-pages-wrapper h1,
+  .default-pages-wrapper h2,
+  .default-pages-wrapper h3,
+  .default-pages-wrapper h4,
+  .default-pages-wrapper h5,
+  .default-pages-wrapper h6 {
+      margin:30px 0  20px 0!important;
+    font-size: 18px !important;
+  }
+
+
+
   @media screen and (min-width: 750px) {
     .section-{{ section.id }}-padding {
       padding-top: {{ section.settings.padding_top }}px;
