--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -291,6 +291,8 @@
     
   </head> 
 
+  <h1>hello</h1>
+
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
     <a class="skip-to-content-link button visually-hidden" href="#MainContent">
       {{ 'accessibility.skip_to_text' | t }}
